# dev-tools

./: .dockerignore  .gitignore  Makefile  README.md  configure.mk  configure.sh  defaults.mk  lib.mk  python.mk  stages.mk  vars.mk
configure/: configure.mk  ctxes.mk  defaults.mk  stages.mk
ctxes/: app.mk  cargo.mk  cli.mk  compose.mk  docker-apps.mk  docker-services.mk  pip.mk  pytest.mk  python.mk  rustup.mk  services.mk  tmux.mk  venv.mk  yaml.mk
defaults/: app.mk  clickhouse.mk  docker.mk  migrations.mk  postgresql.mk  pytest.mk  python.mk  redis.mk  rust.mk  service.mk  tmux.mk
dockerfiles/: Dockerfile  Dockerfile.rust  Dockerfile.rust_app
examples/: README.md  configure.ac
examples/bar/: Cargo.toml
examples/bar/src/: main.rs
examples/bar/tests/: requirements.txt
examples/baz/: main.py
examples/baz/migration/: env.py
examples/baz/migrator/: requirements.txt
examples/foo/: Cargo.toml
examples/foo/src/: main.rs
lib/: common.mk
m4/: check_prog.m4  check_version.m4  set_arg_var.m4
mk/: autotools.mk  cargo.mk  postgresql.mk  pytest.mk  sqlx.mk  venv.mk
mk/env/: build.in  postgresql.in  pytest.in  sqlx.in  venv.in
render/: cli.py  log.py  main.py  render.py  settings.py
templates/: app.mk  pytest.mk  python.mk  tmux.mk  venv.mk
templates/clickhouse/: cli.mk  clickhouse.mk
templates/common/: lsof.mk  sudo.mk
templates/common/j2/: build_args.jinja2  envs.jinja2  opts.jinja2
templates/compose/: stand.yaml
templates/compose/common/: build.jinja2  envs.jinja2  publish.jinja2
templates/docker/: compose.mk  docker.mk  dockerd.mk
templates/docker/yamls/: service.yaml  stand.yaml
templates/dockerfiles/: Dockerfile.rust  Dockerfile.rust_app
templates/lib/: common.mk
templates/make/: app.mk  cargo.mk  clickhouse-builder.mk  clickhouse-cli.mk  clickhouse.mk  compose.mk  docker.mk  dockerd.mk  pg_ctl.mk  pip.mk  postgresql.mk  psql.mk  py.mk  pytest.mk  python.mk  redis-cli.mk  redis.mk  rustup.mk  sysctl.mk  tmux.mk  user.xml  venv.mk
templates/make/common/: build_args.j2  defaults.j2  defaults.jinja2  envs.j2  lib.mk  publish.jinja2  sudo.mk
templates/postgresql/: pg_ctl.mk  postgresql.mk  psql.mk
templates/python/: pip.mk  python.mk  venv.mk
templates/redis/: cli.mk  redis.mk
templates/rust/: cargo.mk  rustup.mk
templates/tools/: app.mk  cargo.mk  migrator.mk  pg_ctl.mk  postgresql.mk  psql.mk  pytest.mk  python.mk  redis-cli.mk  rust.mk  rustup.mk  tmux.mk  venv.mk
toolchain/: Makefile  Makefile.in  autoreconf.mk  configure  configure.ac  defaults.in  defaults.mk
toolchain/m4/: set_arg_var.m4
toolchain/python/: Makefile  Makefile.in  configure  configure.ac  defaults.in  defaults.mk
tools/: cargo.mk  locale.mk  postgresql.mk  psql.mk  python.mk
tools/lib/: common.mk
vars/: ctxes.mk  defaults.mk
(+7 files in other folders)
